@@ -195,7 +195,7 @@ public class McastService implements MembershipService,MembershipListener,Messag
     public int getRecoveryCounter(){
         String p = properties.getProperty("recoveryCounter");
         if(p != null){
-            return new Integer(p).intValue();
+            return Integer.valueOf(p).intValue();
         }
         return -1;
     }
@@ -219,7 +219,7 @@ public class McastService implements MembershipService,MembershipListener,Messag
     public long getRecoverySleepTime(){
         String p = properties.getProperty("recoverySleepTime");
         if(p != null){
-            return new Long(p).longValue();
+            return Long.valueOf(p).longValue();
         }
         return -1;
     }
@@ -238,7 +238,7 @@ public class McastService implements MembershipService,MembershipListener,Messag
 
     public int getPort() {
         String p = properties.getProperty("mcastPort");
-        return new Integer(p).intValue();
+        return Integer.valueOf(p).intValue();
     }
 
     public void setFrequency(long time) {
@@ -247,7 +247,7 @@ public class McastService implements MembershipService,MembershipListener,Messag
 
     public long getFrequency() {
         String p = properties.getProperty("mcastFrequency");
-        return new Long(p).longValue();
+        return Long.valueOf(p).longValue();
     }
 
     public void setMcastDropTime(long time) {
@@ -259,7 +259,7 @@ public class McastService implements MembershipService,MembershipListener,Messag
 
     public long getDropTime() {
         String p = properties.getProperty("memberDropTime");
-        return new Long(p).longValue();
+        return Long.valueOf(p).longValue();
     }
 
     /**
